fix(stiri) meta data alignment

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_stiri.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_stiri.scss
@@ -88,7 +88,7 @@ article.post-listing .category {
   padding-bottom: 5px;
   color: #f00;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 300;
   letter-spacing: 2px;
   position: relative;
@@ -120,6 +120,15 @@ article.post-listing .meta {
   font-size: 0.75rem;
   color: #999;
   padding-bottom: 10px;
+}
+
+article.post-listing .meta div {
+  display: inline-block;
+  margin-right: 12px;
+}
+
+article.post-listing .meta div:last-child {
+  margin-right: 0;
 }
 
 body.stiri #search-box,
@@ -179,7 +188,8 @@ body.news #categorii .ais-refinement-list--item a span {
   right: 6px;
   font-weight: 200;
   text-transform: lowercase;
-  background: #999;
+  background: #c33;
+  color: #fff;
 }
 
 body.stiri #categorii .ais-refinement-list--list,
